# QJsonata

./: CMakeLists.txt  README.md
include/jsonata/: Functions.h  JException.h  Jsonata.h  backend.h  common_backend.h  nlohmann_backend.h  qtjson_backend.h  qtvariant_backend.h
src/jsonata/: Functions.cpp  JException.cpp  Jsonata.cpp  Parser.cpp  Tokenizer.cpp  Utils.cpp
src/jsonata/utils/: DateTimeUtils.cpp  Signature.cpp
test/: ArrayTest.cpp  CustomFunctionTest.cpp  DateTimeTest.cpp  Generate.cpp  JsonataTest.cpp  JsonataTest.h  NullSafetyTest.cpp  NumberTest.cpp  NumberTestSimplified.cpp  ParseIntegerTest.cpp  SerializationTest.cpp  SignatureTest.cpp  StringTest.cpp  ThreadTest.cpp  TypesTest.cpp
